--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -24,7 +24,6 @@
     overlay 0.5s allow-discrete;
 
   &::backdrop {
-    background-color: oklch(var(--lch-always-black));
     opacity: 0;
     transition: display 0.5s allow-discrete, opacity 0.5s, overlay 0.5s allow-discrete;
   }
